--- a/.gitmodules
+++ b/.gitmodules
@@ -1,80 +1,80 @@
 [submodule "qtbase"]
 	path = qtbase
-	url = ../qtbase.git
-	branch = 5.15
+	url = ../tqtc-qtbase.git
+	alias = qt/qtbase
+	branch = tqtc/lts-5.15
 	status = essential
-	repoType = inherited
 [submodule "qtsvg"]
 	depends = qtbase
 	path = qtsvg
-	url = ../qtsvg.git
-	branch = 5.15
+	url = ../tqtc-qtsvg.git
+	alias = qt/qtsvg
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtdeclarative"]
 	depends = qtbase
 	recommends = qtsvg
 	path = qtdeclarative
-	url = ../qtdeclarative.git
-	branch = 5.15
+	url = ../tqtc-qtdeclarative.git
+	alias = qt/qtdeclarative
+	branch = tqtc/lts-5.15
 	status = essential
-	repoType = inherited
 [submodule "qtactiveqt"]
 	depends = qtbase
 	path = qtactiveqt
-	url = ../qtactiveqt.git
-	branch = 5.15
+	url = ../tqtc-qtactiveqt.git
+	alias = qt/qtactiveqt
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtscript"]
 	depends = qtbase
 	recommends = qttools
 	path = qtscript
-	url = ../qtscript.git
-	branch = 5.15
+	url = ../tqtc-qtscript.git
+	alias = qt/qtscript
+	branch = tqtc/lts-5.15
 	status = deprecated
-	repoType = inherited
 [submodule "qtmultimedia"]
 	depends = qtbase
 	recommends = qtdeclarative
 	path = qtmultimedia
-	url = ../qtmultimedia.git
-	branch = 5.15
+	url = ../tqtc-qtmultimedia.git
+	alias = qt/qtmultimedia
+	branch = tqtc/lts-5.15
 	status = essential
-	repoType = inherited
 [submodule "qttools"]
 	depends = qtbase
 	recommends = qtdeclarative qtactiveqt
 	path = qttools
-	url = ../qttools.git
-	branch = 5.15
+	url = ../tqtc-qttools.git
+	alias = qt/qttools
+	branch = tqtc/lts-5.15
 	status = essential
-	repoType = inherited
 [submodule "qtxmlpatterns"]
 	depends = qtbase
 	recommends = qtdeclarative
 	path = qtxmlpatterns
-	url = ../qtxmlpatterns.git
-	branch = 5.15
+	url = ../tqtc-qtxmlpatterns.git
+	alias = qt/qtxmlpatterns
+	branch = tqtc/lts-5.15
 	status = deprecated
-	repoType = inherited
 [submodule "qttranslations"]
 	depends = qttools
 	path = qttranslations
-	url = ../qttranslations.git
-	branch = 5.15
+	url = ../tqtc-qttranslations.git
+	alias = qt/qttranslations
+	branch = tqtc/lts-5.15
 	status = essential
 	priority = 30
-	repoType = inherited
 [submodule "qtdoc"]
 	depends = qtdeclarative qttools
 	recommends = qtmultimedia qtquickcontrols qtquickcontrols2
 	path = qtdoc
-	url = ../qtdoc.git
-	branch = 5.15
+	url = ../tqtc-qtdoc.git
+	alias = qt/qtdoc
+	branch = tqtc/lts-5.15
 	status = essential
 	priority = 40
-	repoType = inherited
 [submodule "qtrepotools"]
 	path = qtrepotools
 	url = ../qtrepotools.git
@@ -94,18 +94,18 @@
 	depends = qtbase
 	recommends = qtdeclarative qtquickcontrols qtquickcontrols2 qtserialport
 	path = qtlocation
-	url = ../qtlocation.git
-	branch = 5.15
+	url = ../tqtc-qtlocation.git
+	alias = qt/qtlocation
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtsensors"]
 	depends = qtbase
 	recommends = qtdeclarative
 	path = qtsensors
-	url = ../qtsensors.git
-	branch = 5.15
+	url = ../tqtc-qtsensors.git
+	alias = qt/qtsensors
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtsystems"]
 	depends = qtbase
 	recommends = qtdeclarative
@@ -140,108 +140,108 @@
 	depends = qtbase
 	recommends = qtdeclarative qtandroidextras
 	path = qtconnectivity
-	url = ../qtconnectivity.git
-	branch = 5.15
+	url = ../tqtc-qtconnectivity.git
+	alias = qt/qtconnectivity
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtwayland"]
 	depends = qtbase
 	recommends = qtdeclarative
 	path = qtwayland
-	url = ../qtwayland.git
-	branch = 5.15
+	url = ../tqtc-qtwayland.git
+	alias = qt/qtwayland
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qt3d"]
 	depends = qtbase
 	recommends = qtdeclarative qtimageformats qtgamepad
 	path = qt3d
-	url = ../qt3d.git
-	branch = 5.15
+	url = ../tqtc-qt3d.git
+	alias = qt/qt3d
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtimageformats"]
 	depends = qtbase
 	path = qtimageformats
-	url = ../qtimageformats.git
-	branch = 5.15
+	url = ../tqtc-qtimageformats.git
+	alias = qt/qtimageformats
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtgraphicaleffects"]
 	depends = qtdeclarative
 	path = qtgraphicaleffects
-	url = ../qtgraphicaleffects.git
-	branch = 5.15
+	url = ../tqtc-qtgraphicaleffects.git
+	alias = qt/qtgraphicaleffects
+	branch = tqtc/lts-5.15
 	status = essential
-	repoType = inherited
 [submodule "qtquickcontrols"]
 	depends = qtdeclarative
 	recommends = qtgraphicaleffects
 	path = qtquickcontrols
-	url = ../qtquickcontrols.git
-	branch = 5.15
+	url = ../tqtc-qtquickcontrols.git
+	alias = qt/qtquickcontrols
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtserialbus"]
 	depends = qtbase
 	recommends = qtserialport
 	path = qtserialbus
-	url = ../qtserialbus.git
-	branch = 5.15
+	url = ../tqtc-qtserialbus.git
+	alias = qt/qtserialbus
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtserialport"]
 	depends = qtbase
 	path = qtserialport
-	url = ../qtserialport.git
-	branch = 5.15
+	url = ../tqtc-qtserialport.git
+	alias = qt/qtserialport
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtx11extras"]
 	depends = qtbase
 	path = qtx11extras
-	url = ../qtx11extras.git
-	branch = 5.15
+	url = ../tqtc-qtx11extras.git
+	alias = qt/qtx11extras
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtmacextras"]
 	depends = qtbase
 	path = qtmacextras
-	url = ../qtmacextras.git
-	branch = 5.15
+	url = ../tqtc-qtmacextras.git
+	alias = qt/qtmacextras
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtwinextras"]
 	depends = qtbase
 	recommends = qtdeclarative qtmultimedia
 	path = qtwinextras
-	url = ../qtwinextras.git
-	branch = 5.15
+	url = ../tqtc-qtwinextras.git
+	alias = qt/qtwinextras
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtandroidextras"]
 	depends = qtbase
 	path = qtandroidextras
-	url = ../qtandroidextras.git
-	branch = 5.15
+	url = ../tqtc-qtandroidextras.git
+	alias = qt/qtandroidextras
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtwebsockets"]
 	depends = qtbase
 	recommends = qtdeclarative
 	path = qtwebsockets
-	url = ../qtwebsockets.git
-	branch = 5.15
+	url = ../tqtc-qtwebsockets.git
+	alias = qt/qtwebsockets
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtwebchannel"]
 	depends = qtbase
 	recommends = qtdeclarative qtwebsockets
 	path = qtwebchannel
-	url = ../qtwebchannel.git
-	branch = 5.15
+	url = ../tqtc-qtwebchannel.git
+	alias = qt/qtwebchannel
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtwebengine"]
 	depends = qtdeclarative
 	recommends = qtquickcontrols qtquickcontrols2 qtlocation qtwebchannel qttools
@@ -250,153 +250,155 @@
 	branch = 5.15
 	status = addon
 	priority = 10
-	repoType = inherited
 [submodule "qtcanvas3d"]
 	depends = qtdeclarative
 	path = qtcanvas3d
 	url = ../qtcanvas3d.git
 	branch = dev
 	status = ignore
-	repoType = inherited
 [submodule "qtwebview"]
 	depends = qtdeclarative
 	recommends = qtwebengine
 	path = qtwebview
-	url = ../qtwebview.git
-	branch = 5.15
+	url = ../tqtc-qtwebview.git
+	alias = qt/qtwebview
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtquickcontrols2"]
 	depends = qtgraphicaleffects
 	recommends = qtimageformats
 	path = qtquickcontrols2
-	url = ../qtquickcontrols2.git
-	branch = 5.15
+	url = ../tqtc-qtquickcontrols2.git
+	alias = qt/qtquickcontrols2
+	branch = tqtc/lts-5.15
 	status = essential
-	repoType = inherited
 [submodule "qtpurchasing"]
 	depends = qtbase
 	recommends = qtdeclarative qtandroidextras
 	path = qtpurchasing
-	url = ../qtpurchasing.git
-	branch = 5.15
+	url = ../tqtc-qtpurchasing.git
+	alias = qt/qtpurchasing
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtcharts"]
 	depends = qtbase
 	recommends = qtdeclarative qtmultimedia
 	path = qtcharts
-	url = ../qtcharts.git
-	branch = 5.15
+	url = ../tqtc-qtcharts.git
+	alias = qt/qtcharts
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtdatavis3d"]
 	depends = qtbase
 	recommends = qtdeclarative qtmultimedia
 	path = qtdatavis3d
-	url = ../qtdatavis3d.git
-	branch = 5.15
+	url = ../tqtc-qtdatavis3d.git
+	alias = qt/qtdatavis3d
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtvirtualkeyboard"]
 	depends = qtbase qtdeclarative qtsvg
 	recommends = qtmultimedia qtquickcontrols
 	path = qtvirtualkeyboard
-	url = ../qtvirtualkeyboard.git
-	branch = 5.15
+	url = ../tqtc-qtvirtualkeyboard.git
+	alias = qt/qtvirtualkeyboard
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtgamepad"]
 	depends = qtbase
 	recommends = qtdeclarative
 	path = qtgamepad
-	url = ../qtgamepad.git
-	branch = 5.15
+	url = ../tqtc-qtgamepad.git
+	alias = qt/qtgamepad
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtscxml"]
 	depends = qtbase qtdeclarative
 	path = qtscxml
-	url = ../qtscxml.git
-	branch = 5.15
+	url = ../tqtc-qtscxml.git
+	alias = qt/qtscxml
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtspeech"]
 	depends = qtbase
 	recommends = qtdeclarative qtmultimedia
 	path = qtspeech
-	url = ../qtspeech.git
-	branch = 5.15
+	url = ../tqtc-qtspeech.git
+	alias = qt/qtspeech
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtnetworkauth"]
 	depends = qtbase
 	path = qtnetworkauth
-	url = ../qtnetworkauth.git
-	branch = 5.15
+	url = ../tqtc-qtnetworkauth.git
+	alias = qt/qtnetworkauth
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtremoteobjects"]
 	depends = qtbase
 	recommends = qtdeclarative
 	path = qtremoteobjects
-	url = ../qtremoteobjects.git
-	branch = 5.15
+	url = ../tqtc-qtremoteobjects.git
+	alias = qt/qtremoteobjects
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtwebglplugin"]
 	depends = qtbase qtwebsockets
 	recommends = qtdeclarative
 	path = qtwebglplugin
-	url = ../qtwebglplugin.git
-	branch = 5.15
+	url = ../tqtc-qtwebglplugin.git
+	alias = qt/qtwebglplugin
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtlottie"]
 	depends = qtbase qtdeclarative
 	path = qtlottie
-	url = ../qtlottie.git
-	branch = 5.15
+	url = ../tqtc-qtlottie.git
+	alias = qt/qtlottie
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtquicktimeline"]
 	depends = qtbase qtdeclarative
 	path = qtquicktimeline
-	url = ../qtquicktimeline
-	branch = 5.15
+	url = ../tqtc-qtquicktimeline
+	alias = qt/qtquicktimeline
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtquick3d"]
 	depends = qtbase qtdeclarative
 	path = qtquick3d
-	url = ../qtquick3d.git
-	branch = 5.15
+	url = ../tqtc-qtquick3d.git
+	alias = qt/qtquick3d
+	branch = tqtc/lts-5.15
 	status = addon
-	repoType = inherited
 [submodule "qtknx"]
 	depends = qtbase
 	recommends = qtdeclarative
 	path = qtknx
-	url = ../qtknx.git
-	branch = 5.15
+	url = ../tqtc-qtknx.git
+	alias = qt/qtknx
+	branch = tqtc/lts-5.15
 	status = addon
 	project = qtknx.pro
 [submodule "qtmqtt"]
 	depends = qtbase
 	path = qtmqtt
-	url = ../qtmqtt.git
-	branch = 5.15
+	url = ../tqtc-qtmqtt.git
+	alias = qt/qtmqtt
+	branch = tqtc/lts-5.15
 	status = addon
 	project = qtmqtt.pro
 [submodule "qtopcua"]
 	depends = qtbase qtdeclarative
 	path = qtopcua
-	url = ../qtopcua.git
-	branch = 5.15
+	url = ../tqtc-qtopcua.git
+	alias = qt/qtopcua
+	branch = tqtc/lts-5.15
 	status = preview
 [submodule "qtcoap"]
 	depends = qtbase
 	path = qtcoap
-	url = ../qtcoap.git
-	branch = 5.15
+	url = ../tqtc-qtcoap.git
+	alias = qt/qtcoap
+	branch = tqtc/lts-5.15
 	status = addon
