Use public qtscript also in tqtc/lts.5.15 branch
Change-Id: Id2546b02bf957f6ca06b351dde527d237c523505
Reviewed-by: Tarja Sundqvist <tarja.sundqvist@qt.io>

--- a/.gitmodules
+++ b/.gitmodules
@@ -30,9 +30,8 @@
 	depends = qtbase
 	recommends = qttools
 	path = qtscript
-	url = ../tqtc-qtscript.git
-	alias = qt/qtscript
-	branch = tqtc/lts-5.15
+	url = ../qtscript.git
+	branch = 5.15
 	status = deprecated
 [submodule "qtmultimedia"]
 	depends = qtbase
