--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 	alias = qt/qtbase
 	branch = tqtc/lts-5.15
 	status = essential
+	repoType = replaced
 [submodule "qtsvg"]
 	depends = qtbase
 	path = qtsvg
@@ -11,6 +12,7 @@
 	alias = qt/qtsvg
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtdeclarative"]
 	depends = qtbase
 	recommends = qtsvg
@@ -19,6 +21,7 @@
 	alias = qt/qtdeclarative
 	branch = tqtc/lts-5.15
 	status = essential
+	repoType = replaced
 [submodule "qtactiveqt"]
 	depends = qtbase
 	path = qtactiveqt
@@ -26,6 +29,7 @@
 	alias = qt/qtactiveqt
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtscript"]
 	depends = qtbase
 	recommends = qttools
@@ -41,6 +45,7 @@
 	alias = qt/qtmultimedia
 	branch = tqtc/lts-5.15
 	status = essential
+	repoType = replaced
 [submodule "qttools"]
 	depends = qtbase
 	recommends = qtdeclarative qtactiveqt
@@ -49,6 +54,7 @@
 	alias = qt/qttools
 	branch = tqtc/lts-5.15
 	status = essential
+	repoType = replaced
 [submodule "qtxmlpatterns"]
 	depends = qtbase
 	recommends = qtdeclarative
@@ -57,6 +63,7 @@
 	alias = qt/qtxmlpatterns
 	branch = tqtc/lts-5.15
 	status = deprecated
+	repoType = replaced
 [submodule "qttranslations"]
 	depends = qttools
 	path = qttranslations
@@ -65,6 +72,7 @@
 	branch = tqtc/lts-5.15
 	status = essential
 	priority = 30
+	repoType = replaced
 [submodule "qtdoc"]
 	depends = qtdeclarative qttools
 	recommends = qtmultimedia qtquickcontrols qtquickcontrols2
@@ -74,6 +82,7 @@
 	branch = tqtc/lts-5.15
 	status = essential
 	priority = 40
+	repoType = replaced
 [submodule "qtrepotools"]
 	path = qtrepotools
 	url = ../qtrepotools.git
@@ -97,6 +106,7 @@
 	alias = qt/qtlocation
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtsensors"]
 	depends = qtbase
 	recommends = qtdeclarative
@@ -105,6 +115,7 @@
 	alias = qt/qtsensors
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtsystems"]
 	depends = qtbase
 	recommends = qtdeclarative
@@ -136,6 +147,7 @@
 	alias = qt/qtconnectivity
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtwayland"]
 	depends = qtbase
 	recommends = qtdeclarative
@@ -144,6 +156,7 @@
 	alias = qt/qtwayland
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qt3d"]
 	depends = qtbase
 	recommends = qtdeclarative qtimageformats qtgamepad
@@ -152,6 +165,7 @@
 	alias = qt/qt3d
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtimageformats"]
 	depends = qtbase
 	path = qtimageformats
@@ -159,6 +173,7 @@
 	alias = qt/qtimageformats
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtgraphicaleffects"]
 	depends = qtdeclarative
 	path = qtgraphicaleffects
@@ -166,6 +181,7 @@
 	alias = qt/qtgraphicaleffects
 	branch = tqtc/lts-5.15
 	status = essential
+	repoType = replaced
 [submodule "qtquickcontrols"]
 	depends = qtdeclarative
 	recommends = qtgraphicaleffects
@@ -174,6 +190,7 @@
 	alias = qt/qtquickcontrols
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtserialbus"]
 	depends = qtbase
 	recommends = qtserialport
@@ -182,6 +199,7 @@
 	alias = qt/qtserialbus
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtserialport"]
 	depends = qtbase
 	path = qtserialport
@@ -189,6 +207,7 @@
 	alias = qt/qtserialport
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtx11extras"]
 	depends = qtbase
 	path = qtx11extras
@@ -196,6 +215,7 @@
 	alias = qt/qtx11extras
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtmacextras"]
 	depends = qtbase
 	path = qtmacextras
@@ -203,6 +223,7 @@
 	alias = qt/qtmacextras
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtwinextras"]
 	depends = qtbase
 	recommends = qtdeclarative qtmultimedia
@@ -211,6 +232,7 @@
 	alias = qt/qtwinextras
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtandroidextras"]
 	depends = qtbase
 	path = qtandroidextras
@@ -218,6 +240,7 @@
 	alias = qt/qtandroidextras
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtwebsockets"]
 	depends = qtbase
 	recommends = qtdeclarative
@@ -226,6 +249,7 @@
 	alias = qt/qtwebsockets
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtwebchannel"]
 	depends = qtbase
 	recommends = qtdeclarative qtwebsockets
@@ -234,6 +258,7 @@
 	alias = qt/qtwebchannel
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtwebengine"]
 	depends = qtdeclarative
 	recommends = qtquickcontrols qtquickcontrols2 qtlocation qtwebchannel qttools
@@ -256,6 +281,7 @@
 	alias = qt/qtwebview
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtquickcontrols2"]
 	depends = qtgraphicaleffects
 	recommends = qtimageformats
@@ -264,6 +290,7 @@
 	alias = qt/qtquickcontrols2
 	branch = tqtc/lts-5.15
 	status = essential
+	repoType = replaced
 [submodule "qtpurchasing"]
 	depends = qtbase
 	recommends = qtdeclarative qtandroidextras
@@ -272,6 +299,7 @@
 	alias = qt/qtpurchasing
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtcharts"]
 	depends = qtbase
 	recommends = qtdeclarative qtmultimedia
@@ -280,6 +308,7 @@
 	alias = qt/qtcharts
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtdatavis3d"]
 	depends = qtbase
 	recommends = qtdeclarative qtmultimedia
@@ -288,6 +317,7 @@
 	alias = qt/qtdatavis3d
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtvirtualkeyboard"]
 	depends = qtbase qtdeclarative qtsvg
 	recommends = qtmultimedia qtquickcontrols
@@ -296,6 +326,7 @@
 	alias = qt/qtvirtualkeyboard
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtgamepad"]
 	depends = qtbase
 	recommends = qtdeclarative
@@ -304,6 +335,7 @@
 	alias = qt/qtgamepad
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtscxml"]
 	depends = qtbase qtdeclarative
 	path = qtscxml
@@ -311,6 +343,7 @@
 	alias = qt/qtscxml
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtspeech"]
 	depends = qtbase
 	recommends = qtdeclarative qtmultimedia
@@ -319,6 +352,7 @@
 	alias = qt/qtspeech
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtnetworkauth"]
 	depends = qtbase
 	path = qtnetworkauth
@@ -326,6 +360,7 @@
 	alias = qt/qtnetworkauth
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtremoteobjects"]
 	depends = qtbase
 	recommends = qtdeclarative
@@ -334,6 +369,7 @@
 	alias = qt/qtremoteobjects
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtwebglplugin"]
 	depends = qtbase qtwebsockets
 	recommends = qtdeclarative
@@ -342,6 +378,7 @@
 	alias = qt/qtwebglplugin
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtlottie"]
 	depends = qtbase qtdeclarative
 	path = qtlottie
@@ -349,6 +386,7 @@
 	alias = qt/qtlottie
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtquicktimeline"]
 	depends = qtbase qtdeclarative
 	path = qtquicktimeline
@@ -356,6 +394,7 @@
 	alias = qt/qtquicktimeline
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtquick3d"]
 	depends = qtbase qtdeclarative
 	path = qtquick3d
@@ -363,6 +402,7 @@
 	alias = qt/qtquick3d
 	branch = tqtc/lts-5.15
 	status = addon
+	repoType = replaced
 [submodule "qtknx"]
 	depends = qtbase
 	recommends = qtdeclarative
