Update .gitmodules for the 5.15 LTS opensource releases
Updated a branch 'tqtc/lts-5.15-opensource for the
following submodules:
- qtknx
- qtmqtt
- qtopcua
- qtcoap

Change-Id: I8b48d8111d35d370e79a99ab9579a9e716b39577
Reviewed-by: Jani Heikkinen <jani.heikkinen@qt.io>

--- a/.gitmodules
+++ b/.gitmodules
@@ -411,7 +411,7 @@
 	path = qtknx
 	url = ../tqtc-qtknx.git
 	alias = qt/qtknx
-	branch = tqtc/lts-5.15.3
+	branch = tqtc/lts-5.15-opensource
 	status = addon
 	project = qtknx.pro
 [submodule "qtmqtt"]
@@ -419,7 +419,7 @@
 	path = qtmqtt
 	url = ../tqtc-qtmqtt.git
 	alias = qt/qtmqtt
-	branch = tqtc/lts-5.15.3
+	branch = tqtc/lts-5.15-opensource
 	status = addon
 	project = qtmqtt.pro
 [submodule "qtopcua"]
@@ -427,12 +427,12 @@
 	path = qtopcua
 	url = ../tqtc-qtopcua.git
 	alias = qt/qtopcua
-	branch = tqtc/lts-5.15.3
+	branch = tqtc/lts-5.15-opensource
 	status = preview
 [submodule "qtcoap"]
 	depends = qtbase
 	path = qtcoap
 	url = ../tqtc-qtcoap.git
 	alias = qt/qtcoap
-	branch = tqtc/lts-5.15.3
+	branch = tqtc/lts-5.15-opensource
 	status = addon
